--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,10 +27,11 @@
         android:id="@+id/update"/>
 
     <com.idealcn.define.view.DefineClock
+        android:visibility="visible"
         android:layout_centerInParent="true"
-       android:padding="10dp"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:padding="20dp"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
         />
 
 </RelativeLayout>
