更改MyView测量的逻辑，同时适配英文字母显示

--- a/app/src/main/res/layout/activity_myviewgroup.xml
+++ b/app/src/main/res/layout/activity_myviewgroup.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.idealcn.define.view.MyViewGroup xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:ideal="http://schemas.android.com/apk/res-auto"
+    >
 
-    <Button
-        android:textColor="#dfdfdf"
+    <com.idealcn.define.view.MyView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:text="myViewGroup"
+        ideal:myView_text="myViewGroup"
+        android:textColor="#dfdfdf"
         />
 
-</com.idealcn.define.view.MyViewGroup>
+</FrameLayout>
