更改类路径

--- a/app/src/main/res/layout/activity_clock.xml
+++ b/app/src/main/res/layout/activity_clock.xml
@@ -5,7 +5,7 @@
         android:padding="30dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <com.idealcn.define.view.DefineClock
+        <com.idealcn.define.view.view.DefineClock
             android:layout_width="300dp"
             android:layout_height="300dp" />
     </FrameLayout>
