加入流式布局

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -45,5 +45,12 @@
             android:layout_height="wrap_content"
             android:text="微信图片选择器"
             android:id="@+id/picSelector"/>
+
+        <Button
+            android:onClick="@{click}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="流式布局"
+            android:id="@+id/flowLayout"/>
     </LinearLayout>
 </layout>
