--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,9 @@
         <attr name="horizontal_space" format="dimension"/>
         <attr name="vertical_space" format="dimension"/>
     </declare-styleable>
+
+    <declare-styleable name="FlowLayout">
+        <attr name="textColor" format="color"/>
+        <attr name="textSize" format="dimension"/>
+    </declare-styleable>
 </resources>
