--- a/app/src/main/res/drawable/btn_shape.xml
+++ b/app/src/main/res/drawable/btn_shape.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
-<solid android:color="@color/colorAccent"/>
-    <corners android:radius="8dp"/>
-    <stroke android:color="@color/colorAccent" android:width="0.5dp"/>
-    <size android:width="30dp"
-        android:height="20dp"/>
+>
+    <solid android:color="@android:color/transparent" />
+    <corners android:radius="8dp" />
+    <stroke
+        android:width="0.5dp"
+        android:color="@color/colorAccent" />
+    <!--<size
+        android:width="50dp"
+        android:height="20dp" />-->
 </shape>
