--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -52,5 +52,12 @@
             android:layout_height="wrap_content"
             android:text="流式布局"
             android:id="@+id/flowLayout"/>
+
+        <!--<Button-->
+            <!--android:onClick="@{click}"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="padding"-->
+            <!--android:id="@+id/padding"/>-->
     </LinearLayout>
 </layout>
