--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,8 +30,25 @@
         <attr name="vertical_space" format="dimension"/>
     </declare-styleable>
 
-    <declare-styleable name="FlowLayout">
+
+
+
+
+
+    <declare-styleable name="FlowChildView">
+        <attr name="text" format="string"/>
         <attr name="textColor" format="color"/>
         <attr name="textSize" format="dimension"/>
     </declare-styleable>
+
+    <style name="FlowChildView">
+        <item name="android:padding">5dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:background">@drawable/btn_shape</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
 </resources>
