--- a/app/src/main/res/layout/activity_clock.xml
+++ b/app/src/main/res/layout/activity_clock.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:define="http://schemas.android.com/apk/res-auto">
 
-    <FrameLayout
-        android:padding="30dp"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:gravity="center"
+            android:text="time"
+            android:textSize="20sp" />
+
         <com.idealcn.define.view.view.DefineClock
             android:layout_width="300dp"
-            android:layout_height="300dp" />
-    </FrameLayout>
+            android:layout_height="300dp"
+            android:layout_marginTop="30dp"
+            android:padding="30dp" />
+    </LinearLayout>
 </layout>
