加入时间轴

--- a/app/src/main/res/layout/activity_drag.xml
+++ b/app/src/main/res/layout/activity_drag.xml
@@ -10,7 +10,7 @@
             android:background="@color/colorPrimaryDark"/>
 
         <TextView
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@color/colorAccent"/>
