解决子view不能拖动的问题

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -35,7 +35,7 @@
 
             />
 
-       <!-- <com.idealcn.define.view.view.FlowChildView
+        <com.idealcn.define.view.view.FlowChildView
             style="@style/FlowChildView"
             define:textColor="@color/colorAccent"
             define:textSize="14sp"
@@ -52,7 +52,7 @@
             define:text="拖拽"
             android:id="@+id/drag"
             android:onClick="@{click}"
-            />-->
+            />
 
 
         <com.idealcn.define.view.view.FlowChildView
