--- a/app/src/main/res/layout/activity_drag.xml
+++ b/app/src/main/res/layout/activity_drag.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <com.idealcn.define.view.view.MyViewGroup
+    <com.idealcn.define.view.view.SlideLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="80dp">
         <TextView
-            android:layout_width="200dp"
-            android:layout_height="100dp"
+            android:gravity="center"
+            android:text="content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@color/colorPrimaryDark"/>
 
         <TextView
-            android:visibility="visible"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:gravity="center"
+            android:text="menu"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
             android:background="@color/colorAccent"/>
-    </com.idealcn.define.view.view.MyViewGroup>
+    </com.idealcn.define.view.view.SlideLayout>
 </layout>
