--- a/app/src/main/res/layout/activity_drag.xml
+++ b/app/src/main/res/layout/activity_drag.xml
@@ -1,21 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.idealcn.define.view.view.SlideLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp">
-        <TextView
-            android:gravity="center"
-            android:text="content"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorPrimaryDark"/>
+        android:layout_height="match_parent">
 
-        <TextView
-            android:gravity="center"
-            android:text="menu"
-            android:layout_width="120dp"
-            android:layout_height="match_parent"
-            android:background="@color/colorAccent"/>
-    </com.idealcn.define.view.view.SlideLayout>
+        <com.idealcn.define.view.view.SlideLayout
+            android:id="@+id/slideLayout"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimaryDark"
+                android:gravity="center"
+                android:text="content" />
+
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
+                android:background="@color/colorAccent"
+                android:gravity="center"
+                android:text="menu" />
+        </com.idealcn.define.view.view.SlideLayout>
+
+        <com.idealcn.define.view.view.GestureDragView
+            android:id="@+id/gestureDragView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/slideLayout" />
+
+    </android.support.constraint.ConstraintLayout>
 </layout>
