--- a/app/src/main/res/layout/activity_define_viewgroup.xml
+++ b/app/src/main/res/layout/activity_define_viewgroup.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:layout_margin="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="河南省平舆县"/>
@@ -14,19 +15,26 @@
         android:layout_height="wrap_content"
         android:text="中华人民共和国"/>
     <TextView
+        android:layout_marginLeft="15dp"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="北京市"/>
     <TextView
+        android:layout_marginLeft="15dp"
+
         android:lines="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="乌鲁木齐"/>
     <TextView
+        android:layout_marginLeft="15dp"
+        android:lines="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="山东农商银行"/>
     <TextView
+        android:layout_marginLeft="15dp"
         android:lines="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
