--- a/app/src/main/res/layout/activity_define_viewgroup.xml
+++ b/app/src/main/res/layout/activity_define_viewgroup.xml
@@ -5,6 +5,90 @@
 
     <TextView
         android:layout_margin="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="河南省平舆县"/>
+    <TextView
+        android:layout_marginLeft="50dp"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="中华人民共和国"/>
+    <TextView
+        android:layout_marginLeft="15dp"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="北京市"/>
+    <TextView
+        android:layout_marginLeft="15dp"
+
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="乌鲁木齐"/>
+    <TextView
+        android:layout_marginLeft="15dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="山东农商银行"/>
+    <TextView
+        android:layout_marginLeft="15dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="环球黑卡"/>
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="阿里巴巴(中国)技术有限公司"/>
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_margin="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="河南省平舆县"/>
@@ -86,4 +170,256 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="天美游戏"/>
+
+    <TextView
+        android:layout_margin="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="河南省平舆县"/>
+    <TextView
+        android:layout_marginLeft="50dp"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="中华人民共和国"/>
+    <TextView
+        android:layout_marginLeft="15dp"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="北京市"/>
+    <TextView
+        android:layout_marginLeft="15dp"
+
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="乌鲁木齐"/>
+    <TextView
+        android:layout_marginLeft="15dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="山东农商银行"/>
+    <TextView
+        android:layout_marginLeft="15dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="环球黑卡"/>
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="阿里巴巴(中国)技术有限公司"/>
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_margin="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="河南省平舆县"/>
+    <TextView
+        android:layout_marginLeft="50dp"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="中华人民共和国"/>
+    <TextView
+        android:layout_marginLeft="15dp"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="北京市"/>
+    <TextView
+        android:layout_marginLeft="15dp"
+
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="乌鲁木齐"/>
+    <TextView
+        android:layout_marginLeft="15dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="山东农商银行"/>
+    <TextView
+        android:layout_marginLeft="15dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="环球黑卡"/>
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="阿里巴巴(中国)技术有限公司"/>
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_margin="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="河南省平舆县"/>
+    <TextView
+        android:layout_marginLeft="50dp"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="中华人民共和国"/>
+    <TextView
+        android:layout_marginLeft="15dp"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="北京市"/>
+    <TextView
+        android:layout_marginLeft="15dp"
+
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="乌鲁木齐"/>
+    <TextView
+        android:layout_marginLeft="15dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="山东农商银行"/>
+    <TextView
+        android:layout_marginLeft="15dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="环球黑卡"/>
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="阿里巴巴(中国)技术有限公司"/>
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天美游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="网易云音乐"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="朱雀游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="完美游戏"/>
+
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="腾讯游戏"/>
 </com.idealcn.define.view.view.DefineViewGroup>
