--- a/app/src/main/res/layout/activity_define_viewgroup.xml
+++ b/app/src/main/res/layout/activity_define_viewgroup.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.idealcn.define.view.view.DefineViewGroup
+    android:background="@color/colorPrimaryDark"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -27,12 +28,59 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="乌鲁木齐"/>
+
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
+        android:lines="1"
+        android:text="山东农商银行威海高新区分行" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:lines="1"
+        android:text="环球黑卡高端VIP钻石卡" />
+    <TextView
+        android:layout_marginLeft="10dp"
         android:lines="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="山东农商银行"/>
+        android:text="阿里巴巴(中国)技术有限公司"/>
+
+    <TextView
+        android:layout_margin="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="河南省平舆县"/>
+    <TextView
+        android:layout_marginLeft="50dp"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="中华人民共和国"/>
+    <TextView
+        android:layout_marginLeft="15dp"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="北京市"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:lines="1"
+        android:text="内蒙古自治区" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:lines="1"
+        android:text="山东农商银行威海高新区分行" />
     <TextView
         android:layout_marginLeft="15dp"
         android:lines="1"
@@ -45,47 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="阿里巴巴(中国)技术有限公司"/>
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
 
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
 
     <TextView
         android:layout_margin="20dp"
@@ -129,47 +137,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="阿里巴巴(中国)技术有限公司"/>
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
 
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
 
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
 
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
 
     <TextView
         android:layout_margin="20dp"
@@ -213,47 +183,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="阿里巴巴(中国)技术有限公司"/>
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
 
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
 
     <TextView
         android:layout_margin="20dp"
@@ -297,129 +227,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="阿里巴巴(中国)技术有限公司"/>
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
 
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
-
-    <TextView
-        android:layout_margin="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="河南省平舆县"/>
-    <TextView
-        android:layout_marginLeft="50dp"
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="中华人民共和国"/>
-    <TextView
-        android:layout_marginLeft="15dp"
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="北京市"/>
-    <TextView
-        android:layout_marginLeft="15dp"
-
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="乌鲁木齐"/>
-    <TextView
-        android:layout_marginLeft="15dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="山东农商银行"/>
-    <TextView
-        android:layout_marginLeft="15dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="环球黑卡"/>
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="阿里巴巴(中国)技术有限公司"/>
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天美游戏"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="网易云音乐"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="朱雀游戏"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="完美游戏"/>
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:lines="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="腾讯游戏"/>
 </com.idealcn.define.view.view.DefineViewGroup>
